k8s-server/yaml/rabbitmq-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  namespace: k8s-test
  name: rabbitmq
spec:
  replicas: 1
  serviceName: rabbitmq
  selector:
    matchLabels:
      app: rabbitmq
  template:
    metadata:
      labels:
        app: rabbitmq
    spec:
      containers:
      - name: rabbitmq
        image: rabbitmq:3-management
        volumeMounts:
        - name: rabbitmq-data
          mountPath: /var/lib/rabbitmq
        - name: tz-seoul
          mountPath: /etc/localtime
      volumes:
        #- name: rabbitmq-data
        #  hostPath:
        #    path: /data/rabbitmq
        #    type: DirectoryOrCreate
        - name: tz-seoul
          hostPath:
            path: /usr/share/zoneinfo/Asia/Seoul
