k8s-server/yaml/rabbitmq-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rabbitmqmgt
  namespace: k8s-test
spec:
  ingressClassName: nginx
  rules:
  - host: rabbitmq.domain.com # 도메인이 있을 경우 host 지정
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: rabbitmq-management
            port:
              number: 15672
